swagger auth docs
