# pkg/server/routes.go
@@ -31,13 +31,16 @@ func Create(appState *models.AppState) *http.Server {
 	}
 }
 
-// @title			Zep REST API
-// @version		0.x
-// @license.name	Apache 2.0
-// @license.url	http://www.apache.org/licenses/LICENSE-2.0.html
-// @BasePath		/api/v1
-// @schemes		http https
-// @auth			bearerAuth
+// @title						Zep REST API
+// @version					0.x
+// @license.name				Apache 2.0
+// @license.url				http://www.apache.org/licenses/LICENSE-2.0.html
+// @BasePath					/api/v1
+// @schemes					http https
+// @securityDefinitions.apikey	Bearer
+// @in							header
+// @name						Authorization
+// @description				Type "Bearer" followed by a space and JWT token.
 func setupRouter(appState *models.AppState) *chi.Mux {
 	router := chi.NewRouter()
 	router.Use(httpLogger.Logger("router", log))
